overflow fix

--- a/src/App.css
+++ b/src/App.css
@@ -78,6 +78,9 @@ body,
   justify-content: flex-end;
   width: 100%;
   height: 100%;
+}
+.wrapper.info,
+.wrapper.projects {
   overflow-y: scroll;
 }
 
